fix(columns): Stop generating new columns even if last column is cropped

--- a/src/core/gantt.css
+++ b/src/core/gantt.css
@@ -43,7 +43,8 @@
     position: relative;
     top: 50%;
     -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
 }
 
 .gantt-side-background {
